--- a/xira_dashboard.html
+++ b/xira_dashboard.html
@@ -194,7 +194,7 @@
                 <div class="flex justify-between items-center mb-1">
                     <span class="text-xs font-semibold text-violet-800 flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4 mr-2 text-violet-600"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.76l.63-4.43c.12-.83-.58-1.51-1.31-1.51H14z"/><path d="M17 5V3"/></svg>
-                        Filling data gaps with AI........
+                        FILLING DATA GAPS WITH AI........
                     </span>
                     <span class="text-xs font-bold text-violet-800">72%</span>
                 </div>
@@ -269,7 +269,7 @@
                                 <!-- Comparison Metric Card -->
                                 <div class="bg-blue-50 p-3 rounded-lg border-l-4 border-blue-500 mb-4">
                                     <p class="text-xs font-medium text-gray-600">Total Emissions Avoided by Circularity</p>
-                                    <p class="text-2xl font-extrabold text-blue-700 mt-1">50 tonnes CO2! </p>
+                                    <p class="text-2xl font-extrabold text-blue-700 mt-1">50 tonnes!</p>
                                     <p class="text-xs text-gray-500 mt-1">Savings over the last quarter.</p>
                                 </div>
                                 
@@ -371,7 +371,7 @@
 
                         <!-- Bar Chart Mock: Emissions -->
                         <div class="mb-4">
-                            <p class="text-sm font-medium text-gray-700 mb-1">Emissions!</p>
+                            <p class="text-sm font-medium text-gray-700 mb-1">Emissions</p>
                             <!-- Linear -->
                             <div class="h-4 w-full bg-red-200 rounded-lg relative mb-1 overflow-hidden">
                                 <div class="absolute inset-y-0 left-0 bg-red-500 w-[80%]" title="Linear Path: 80 t"></div>
