--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                 <!-- Comparison Metric Card -->
                                 <div class="bg-blue-50 p-3 rounded-lg border-l-4 border-blue-500 mb-4">
                                     <p class="text-xs font-medium text-gray-600">Total Emissions Avoided by Circularity</p>
-                                    <p class="text-2xl font-extrabold text-blue-700 mt-1">50 tonnes!</p>
+                                    <p class="text-2xl font-extrabold text-blue-700 mt-1">50 tonnes!!</p>
                                     <p class="text-xs text-gray-500 mt-1">Savings over the last quarter.</p>
                                 </div>
                                 
