--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
                                     <!-- Water Reduction -->
                                     <div>
-                                        <span class="text-xs text-gray-500">Water ($\text{m}^3$)</span>
+                                        <span class="text-xs text-gray-500">Water </span>
                                         <div class="h-4 w-full bg-gray-200 rounded-lg relative overflow-hidden">
                                             <div class="absolute inset-y-0 left-0 bg-yellow-500 w-[95%]" title="Linear Water: 95% of potential"></div>
                                             <div class="absolute inset-y-0 left-0 bg-emerald-500 w-[45%]" title="Circular Water: 45% of potential"></div>
@@ -388,7 +388,7 @@
                         <!-- Trend Forecast (Less Prominent) -->
                         <div class="bg-gray-50 p-3 rounded-lg border-l-2 border-blue-400">
                             <p class="text-xs text-gray-600">
-                                **Forecast (Water):** Switch to rainwater.
+                                Forecast (Water): Switch to rainwater.
                             </p>
                             <p class="text-sm font-bold text-blue-600 mt-0.5 flex items-center">
                                 -15% Water Usage
